fix headlines with nested tags; minor fixes

--- a/src/data/grammar/mtg/mtg-draft-mnemonic.yaml
+++ b/src/data/grammar/mtg/mtg-draft-mnemonic.yaml
@@ -6,9 +6,9 @@ mtgDraftMnemonic: >
   [_keyword:#randomKeyword#]
   [_limitedCardUnderOver:overrated,underrated,underpowered,overpowered,underwhelming]
   [_numberC:two,three,four,five,six,seven][_numberOf:two,three,four]  
-  [_limitedCardHard:bombs,removal,chase rares,curve-toppers,disruption,deck thinning,dual lands,fixing,milling,creatures,threats,vanilla creatures,card draw,cantrips,chump blockers,counters,fast mana,finishers,goof grabs,ground poinderjank,junk rares,basic lands,bricks,beaters,tips and tricks cards,tokens,tradebait,virtual time walks,#_numberC#-drops,#_numberOf#-ofs]
+  [_limitedCardHard:bombs,removal,chase rares,curve-toppers,disruption,deck thinning,dual lands,fixing,foils,foil #rarity.s#,milling,creatures,threats,vanilla creatures,card draw,cantrips,chump blockers,counters,fast mana,finishers,goof grabs,ground pounders,jank,junk rares,basic lands,bricks,beaters,tips and tricks cards,tokens,tradebait,virtual time walks,#_numberC#-drops,#_numberOf#-ofs]
   [_limitedCardSoft:removal,lifegain,land,weenies,ramp spells,hatedrafts,signals,#_threatAdjConsonant# threats]
-  [_limitedCardVowel:acceleration,anthems,aggro,artifacts,edicts,enchantments,engine cards,hosers,inevitability,instants,one-ofs,utility lands,one-drops,eight-drops,#_limitedCardUnderOver# cards]
+  [_limitedCardVowel:acceleration,anthems,aggro,artifacts,edicts,enchantments,engine cards,hosers,inevitability,instants,one-ofs,utility creatures,utility lands,one-drops,eight-drops,#_limitedCardUnderOver# cards]
   [_someWord:#cardCategory.s#,#cardCategoryClassTerm#,#creatureTypes.s#,#cardQuality# cards,#pro#'s pick order]
   [_firstWord1:#_limitedCardHard#,#_limitedCardSoft#][_secondWord1:#_limitedCardVowel#][_thirdWord1:#_limitedCardHard#,#_limitedCardSoft#][_fourthWord1:#_limitedCardVowel#][_fifthWord1:#_limitedCardHard#,#_limitedCardSoft#,#_someWord#]
   [__firstWord1:#_firstWord1#][__secondWord1:#_secondWord1#][__thirdWord1:#_thirdWord1#][__fourthWord1:#_fourthWord1#][__fifthWord1:#_fifthWord1#]
