freshen up liliana flavor text

--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -118,8 +118,11 @@
       "casual players[#pluralPronouns#]",
       "forum posters[#pluralPronouns#]",
       "Facebook commenters[#pluralPronouns#]",
+      "GDS participants[#pluralPronouns#]",
+      "Twitch streamers[#pluralPronouns#]",
       "'You Make The Card' participants[#pluralPronouns#]",
       "The Future Future League[#neutralPronouns#]",
+      "pros[#pluralPronouns#]",
       "the pro's[#pluralPronouns#]",
       "barns[#pluralPronouns#]",
       "scrubs[#pluralPronouns#]",
