--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -75,6 +75,7 @@
       "Ashnod#femalePronouns#",
       "Avacyn#femalePronouns#",
       "Baron Sengir#malePronouns#",
+      "Belzenlok#malePronouns#",      
       "Borborygmos#malePronouns#",
       "Commander Eesha#femalePronouns#",
       "Crovax#malePronouns#",
@@ -90,18 +91,22 @@
       "Grakk#malePronouns#",
       "Grick Doobin#malePronouns#",
       "Griselbrand#malePronouns#",
+      "Grunn#malePronouns#",      
       "Hanna#femalePronouns#",
       "Hans#malePronouns#",
       "Hazdur the Abbot#malePronouns#",
       "Hidetsugu#malePronouns#",
       "Ink-Eyes#femalePronouns#",
       "Isamaru#malePronouns#",
+      "Jhoira#femalePronouns#",
       "Kiki-Jiki#malePronouns#",
       "Molimo#malePronouns#",
       "Momir Vig#malePronouns#",
       "Norin#malePronouns#",
       "Purphoros#malePronouns#",
       "Saffi Eriksdotter#femalePronouns#",
+      "Sisay#femalePronouns#",
+      "Slimefoot#malePronouns#",        
       "Squee#malePronouns#",
       "Tahngarth#malePronouns#",
       "Tasigur#malePronouns#",
