--- a/src/data/grammar/vocab/verbs/verb-reflexive.yaml
+++ b/src/data/grammar/vocab/verbs/verb-reflexive.yaml
@@ -26,6 +26,8 @@ verbReflexive:
 - defend
 - stick up for
 - control
+- injure
+- second-guess
 - make a fool of
 - make an ass of
 - "#verbTransitive#"
@@ -58,6 +60,8 @@ verbReflexiveGerund:
 - defending
 - sticking up for
 - controlling
+- injuring
+- second-guessing
 - making a fool of
 - making an ass of
 - "#verbTransitiveGerund#"
