--- a/src/data/grammar/headlines/flavor-text.yaml
+++ b/src/data/grammar/headlines/flavor-text.yaml
@@ -13,7 +13,7 @@ flavorText:
   - >
     "I've got the [_n1:#noun#]#_n1#", #planeswalkerFirstName# said as the #noun# came to life. "I've got the #_n1#!"
   - >
-    "From nothing came [_thing:#aNoun#,#massNoun#,#pluralNoun#]#_thing#."
+    "From nothing came [_thing:#aNoun#,#massNoun#,#pluralNoun#,#clothingOrAccessory.aIfNeeded#]#_thing#."
   - >
     "The #covering# of [_thing:#emotion#,#abstractNoun#]#_thing# #outVerb.ed# from the [_who:#characterClass#,#creatureTypes#]#_who#, revealing the #emotion# and [_otherThing:#emotion#,#pluralNoun#]#_otherThing# beneath."
   - >
