--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -3,7 +3,6 @@
   "person": ["#pro#","#pro#","#otherPersonality#"],
   "miscPersonSingular": ["#pro#", "#otherPersonality#", "#psychographic#", "#officialEntity#", "#mtgArtist#"],
   "peoplePlural": ["#pros#", "#pros#", "#playerCategory.s#[#pluralPronouns#]","#playerCategory.s#[#pluralPronouns#]", "#financialStakeholders#"],
-  "peopleStrictlyPlural": ["#playerCategory.s#[#pluralPronouns#]","#playerCategory.s#[#pluralPronouns#]", "#financialStakeholders#"],
   "pro": [
       "Kai Budde[_proNickname:Kai][_proFullName:Kai Budde][#malePronouns#]",
       "Jarvis Yu[_proNickname:Jarvis][_proFullName:Jarvis Yu][#malePronouns#]",
@@ -105,39 +104,36 @@
       "Vanilla Phil[#malePronouns#]"
   ],
 
-  "pros": [
-      "The DCI[#neutralPronouns#]",
-      "Hasbro[#neutralPronouns#]",
-      "WOTC[#neutralPronouns#]",
-      "Magic players[#pluralPronouns#]",
-      "Wizards[#neutralPronouns#]",
-      "sorcerers[#pluralPronouns#]",
-      "MODO players[#pluralPronouns#]",
-      "MTGO developers[#pluralPronouns#]",
-      "judges[#pluralPronouns#]",
-      "[_type:,MTGO ,PPTQ ]#_type#grinders[#pluralPronouns#]",
-      "casual players[#pluralPronouns#]",
-      "forum posters[#pluralPronouns#]",
-      "Facebook commenters[#pluralPronouns#]",
-      "GDS participants[#pluralPronouns#]",
-      "Twitch streamers[#pluralPronouns#]",
-      "'You Make The Card' participants[#pluralPronouns#]",
-      "The Future Future League[#neutralPronouns#]",
-      "pros[#pluralPronouns#]",
-      "the pro's[#pluralPronouns#]",
-      "barns[#pluralPronouns#]",
-      "scrubs[#pluralPronouns#]",
-      "Hall-of-Famers[#pluralPronouns#]",
-      "#psychographic.s#[#pluralPronouns#]",
-      "netdeckers[#pluralPronouns#]",
-      "#deck# players[#pluralPronouns#]",
-      "#deck# players[#pluralPronouns#]",
-      "#format# players[#pluralPronouns#]",
-      "#format# players[#pluralPronouns#]",
-      "#playerCategory.s#[#pluralPronouns#]",
-      "#playerCategory.s#[#pluralPronouns#]",
-      "#playerCategory.s#[#pluralPronouns#]"
+  "proMisc": [
+      "Magic player[#somePronoun#]",
+      "sorcerer[#somePronoun#]",
+      "MODO player[#somePronoun#]",
+      "MTGO developer[#somePronoun#]",
+      "judge[#somePronoun#]",
+      "[_type:,MTGO ,PPTQ ]#_type#grinder[#somePronoun#]",
+      "casual player[#somePronoun#]",
+      "forum poster[#somePronoun#]",
+      "Facebook commenter[#somePronoun#]",
+      "GDS participant[#somePronoun#]",
+      "Twitch streamer[#somePronoun#]",
+      "'You Make The Card' participant[#somePronoun#]",
+      "pro[#somePronoun#]",
+      "barn[#somePronoun#]",
+      "scrub[#somePronoun#]",
+      "Hall-of-Famer[#somePronoun#]",
+      "#psychographic#[#somePronoun#]",
+      "netdecker[#somePronoun#]",
+      "#deck# player[#somePronoun#]",
+      "#deck# player[#somePronoun#]",
+      "#format# player[#somePronoun#]",
+      "#format# player[#somePronoun#]",
+      "#playerCategory#[#somePronoun#]",
+      "#playerCategory#[#somePronoun#]",
+      "#playerCategory#[#somePronoun#]"
   ],
+
+  "pros": ["#proMisc.s#[#pluralPronouns#]"],
+
   "playerCategory": [
     "casual[#neutralPronouns#]",
     "dinosaur[#neutralPronouns#]",
@@ -226,10 +222,11 @@
   ],
 
   "officialEntityGroup": [
-    "Hasbro[#neutralPronouns#]",
+    "Wizards#neutralPronouns#]",
     "WOTC[#neutralPronouns#]",
     "R&D[#neutralPronouns#]",
     "The DCI[#neutralPronouns#]",
+    "Hasbro[#neutralPronouns#]",
     "The Future Future League[#neutralPronouns#]",
     "The Magic Digital Team[#neutralPronouns#]",
     "The #recentCardSet# Design Team[#neutralPronouns#]",
