more flavor text; more vocab

--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -75,12 +75,14 @@
       "Ashnod#femalePronouns#",
       "Avacyn#femalePronouns#",
       "Baron Sengir#malePronouns#",
-      "Belzenlok#malePronouns#",      
+      "Belbe#femalePronouns#",
+      "Belzenlok#malePronouns#",
       "Borborygmos#malePronouns#",
       "Commander Eesha#femalePronouns#",
       "Crovax#malePronouns#",
       "Davvol#malePronouns#",
       "Elesh Norn#femalePronouns#",
+      "Empress Llawan#femalePronouns#",
       "Emrakul#femalePronouns#",
       "Ertai#malePronouns#",
       "Farbid#malePronouns#",
@@ -91,7 +93,7 @@
       "Grakk#malePronouns#",
       "Grick Doobin#malePronouns#",
       "Griselbrand#malePronouns#",
-      "Grunn#malePronouns#",      
+      "Grunn#malePronouns#",
       "Hanna#femalePronouns#",
       "Hans#malePronouns#",
       "Hazdur the Abbot#malePronouns#",
@@ -106,8 +108,10 @@
       "Purphoros#malePronouns#",
       "Saffi Eriksdotter#femalePronouns#",
       "Sisay#femalePronouns#",
-      "Slimefoot#malePronouns#",        
+      "Slimefoot#malePronouns#",
+      "Sol'kanar the Swamp King#malePronouns#"
       "Squee#malePronouns#",
+      "Starke#malePronouns#",
       "Tahngarth#malePronouns#",
       "Tasigur#malePronouns#",
       "Tawnos#malePronouns#",
@@ -181,57 +185,123 @@
   ],
 
   "commonCharacterFirstName": [
+    "Afari",
   	"Agathe",
+    "Alcarus",
+    "Anep",
+    "Anitan",
+    "Anje",
+    "Arna",
+    "Axsh",
+    "Baris",
   	"Borzard",
   	"Brigone",
     "Brint",
+    "Bruenna",
     "Chaeska",
   	"Chadir",
+    "Daria",
   	"Devin",
+    "Disa",
+    "Drarg",
+    "Fodrus",
   	"Galanda",
+    "Garner",
+    "Gorghul",
+    "Goton",
+    "Grete",
   	"Grezkrick",
+    "Gulsen",
+    "Gulistan",
+    "Halina",
   	"Halvor",
   	"Higa",
   	"Ikarov",
+    "Illulia",
   	"Ivra",
     "Jaji",
+    "Javad",
+    "Jazal",
   	"Jefan",
-  	"Javad",
+    "Jestus",
   	"Joskun",
   	"Juri",
+    "Kadhu",
+    "Kellyg",
+    "Kensuke",
+    "Kirce",
+    "Ku-Ku",
+    "Libuse",
+    "Lothar",
   	"Maikal",
+    "Maeveen",
+    "Maimun",
   	"Matoc",
     "Maury",
     "Meekus",
+    "Minaldra",
+    "Mogai",
+    "Murat",
   	"Myznar",
   	"Naxtil",
   	"Nefara",
+    "Noboru",
+    "Numa",
   	"Ola",
+    "Olgard",
+    "Onatah",
   	"Otak",
+    "Predak",
+    "Radulf",
+    "Resimir",
+    "Rimheit",
   	"Ruba",
   	"Runo",
+    "Sarlena",
+    "Sirislav",
   	"Strava",
   	"Svar",
+    "Syeena",
+    "Taaveti",
+    "Tahli",
   	"Takada",
+    "Tarran",
+    "Tojira",
+    "Tullus",
   	"Turni",
   	"Ushanti",
   	"Uta",
   	"Uzric",
   	"Varrik",
+    "Venkat",
   	"Vervamon",
+    "Vickon",
+    "Voka",
+    "Vulok",
+    "Wyhorn",
+    "Xantcha",
   	"Yurin",
     "Zaliki",
-    "Zilan"
+    "Zemoo",
+    "Zilan",
+    "Zul"
   ],
 
   "commonCharacterLastName": [
+    "al-Wyluli",
   	"Arenson",
+    "Chubbins",
   	"Dagsson",
+    "Dasai",
+    "Dreya",
   	"Falkenrath",
   	"Feudkiller",
+    "Kennerüd",
+    "Kroft",
   	"Muldrak",
   	"Nasrin",
   	"Rutstein",
+    "Schlak",
   	"Stromkirk",
   	"Wauki",
     "#itemNounOrMassNoun.noSpaces.capitalize#[_suffix:bane,sbane]#_suffix#"
@@ -260,6 +330,7 @@
     "heretic",
   	"lunarch",
   	"noble",
+    "royal [_position:#characterClass#,#characterProfession#]#_position#",
   	"sensei",
   	"slayer-captain",
   	"vizier",
@@ -295,6 +366,28 @@
     "warden",
     "walker",
     "#emotion##verbTransitive.noSpaces.lowercase#er"
+  ],
+  "characterProfession": [
+    "architect",
+    "armorer",
+    "astronomer",
+    "baliff",
+    "brewmaster",
+    "butcher",
+    "blacksmith",
+    "candlemaker",
+    "cartwright",
+    "cobbler",
+    "falconer",
+    "inventor",
+    "jester",
+    "jewler",
+    "headsman",
+    "magistrate",
+    "scrivener",
+    "tailor",
+    "tax collector",
+    "undertaker"
   ],
   "characterRace": [
   	"akki",
@@ -351,6 +444,7 @@
     "Ghor-Clan",
     "Golgari",
     "Gruul",
+    "Heruj",
     "il-Kor",
     "Izzet",
   	"Jeskai",
@@ -371,12 +465,15 @@
     "Selesnya",
     "Silumgar",
     "Simic",
+    "Skiltfolk",
   	"Stinkdrinker",
   	"Sultai",
     "Sylvok",
   	"Temur",
     "Vulshok",
-  	"Wojek"
+  	"Wojek",
+    "#xth.capitalize# Company",
+    "#nounCompoundWorthy#-Tribe"
   ],
 
   "amonkhetCrop": [
