--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -14,6 +14,7 @@
       "Duskmantle",
       "Ekundu",
       "Femeref",
+      "Fyndhorn",
       "Ghirapur",
       "Glen Elendra",
       "Goldmeadow",
@@ -71,16 +72,20 @@
   	"Erdwal",
   	"Gatsaf",
   	"the Helvault",
+    "Joraga",
   	"Jukai",
   	"Lambholt",
   	"Luxa",
+    "Kelsinko",
   	"Makindi",
+    "Mauzam Asylum",
   	"Meletis",
   	"Numai",
   	"Palandius",
   	"Knollridge",
   	"Kroog",
     "Lumengrid",
+    "Qal Sisma",
   	"Rootwater",
   	"Talas",
   	"Tidehollow",
