--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -109,7 +109,7 @@
       "Saffi Eriksdotter#femalePronouns#",
       "Sisay#femalePronouns#",
       "Slimefoot#malePronouns#",
-      "Sol'kanar the Swamp King#malePronouns#"
+      "Sol'kanar the Swamp King#malePronouns#",
       "Squee#malePronouns#",
       "Starke#malePronouns#",
       "Tahngarth#malePronouns#",
