small fixes and tweaks

--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -21,6 +21,8 @@ headline:
 - "#mtgDeckTechGraphic#"
 - "#cardCallout#"
 - "#mtgoTwitterStyleHeadline#"
+- "#svgStreamerShowdown#"
+- "#svgPackOnePickOne#"
 
 oncePerDay:
   - "#cotdImage#"
