--- a/src/data/grammar/mtg/gameplay/mtg-decks.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-decks.yaml
@@ -191,14 +191,15 @@
       "completely broken",
       "totally dominant",
       "the stone nuts",
-      "the only valid choice",
+      "[_choiceKind:the only valid,a questionable,an unusual choice]#_choiceKind#",
       "completely unplayable",
       "pure garbage",
       "Tier [_tier:0,1,1.5,2,2.5,3]#_tier#",
       "ban-worthy",
       "#officialEntity#'s biggest mistake yet",
       "a trap",
-      "positioned perfectly in the meta",
+      "[_not:,not ][_positioned:well-positioned,viable,competitive,good]#_not# #_positioned#",
+      "[_positioned:well-positioned,positioned perfectly,viable,competitive]#_positioned# in the meta",
       "overhyped by #financialStakeholders#",
       "[_legality:legal,illegal,broken,allowed,sanctioned]#_legality# under tournament rules",
       "viable once #randomRealCard# is [_outcome:banned,reprinted]#_outcome#"
